<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewTitleTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/igate_app" />

            <TextView
                style="@style/TextViewSubTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/enter_visitor_details" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/visitor_photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/profile_pic"/>

                <TextView
                    android:layout_marginTop="10dp"
                    style="@style/TextViewVisitorDetailsTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_take_photo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/TextViewVisitorDetailsTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/visitor_name" />

                <EditText
                    android:id="@+id/visitor_name"
                    style="@style/EditTextVisitorDetailsTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/enter_name_here" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/TextViewVisitorDetailsTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/visitor_number" />

                <EditText
                    android:id="@+id/visitor_number"
                    style="@style/EditTextVisitorDetailsTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/enter_number_here" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/TextViewVisitorDetailsTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/visitor_email" />

                <EditText
                    android:id="@+id/visitor_email"
                    style="@style/EditTextVisitorDetailsTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/enter_email_here" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/TextViewVisitorDetailsTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/visitor_address" />

                <EditText
                    android:id="@+id/visitor_address"
                    style="@style/EditTextVisitorDetailsTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/enter_address_here" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/TextViewVisitorDetailsTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/meeting" />

                <EditText
                    android:id="@+id/visitor_meeting"
                    style="@style/EditTextVisitorDetailsTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/enter_flat_here" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/TextViewVisitorDetailsTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/visitor_purpose" />

                <EditText
                    android:id="@+id/visitor_purpose"
                    style="@style/EditTextVisitorDetailsTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:hint="@string/enter_purpose_here" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submit"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:background="@drawable/rounded_button"
                    android:text="@string/submit" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>